@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-17T08:17:20Z",
-  "count_outdated" : 395,
-  "uniques_outdated" : 228,
-  "count" : 425,
+  "timestamp" : "2022-07-18T01:24:06Z",
+  "count_outdated" : 397,
+  "uniques_outdated" : 229,
+  "count" : 426,
   "uniques" : 245,
   "clones" : [
-    {
-      "timestamp": "2022-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-04T00:00:00Z",
       "count": 2,
